--- a/index.html
+++ b/index.html
@@ -8,69 +8,70 @@
 </head>
 <body>
     
-    <div class="home-box custom-box hide">
+    <div class="home-box custom-box ">
         <h3>Instruction: </h3>
-        <p>Total number of questions: <span class="total-questions">5</span> </p>
-        <button type="button" class="btn">Start</button>
+        <p>Total number of questions: <span class="total-questions"></span> </p>
+        <button type="button" class="btn" onclick="startQuiz()">Start</button>
     </div>
-    <div class="quiz-box custom-box hide">
+    <div class="quiz-box custom-box hide ">
         <div class="question-number">
-            Question 1 of 5
+            <!-- Question 1 of 5 -->
         </div>
         <div class="question-text">
-            Which month comes right before june?
+            <!-- Which month comes right before june? -->
         </div>
         <div class="option-container">
-            <div class="option">July</div>
+            <!-- <div class="option">July</div>
             <div class="option">March</div>
             <div class="option">September</div>
-            <div class="option">May</div>
+            <div class="option">May</div> -->
         </div>
         <div class="next-question-btn">
-            <button type="button" class="btn">Next</button>
+            <button type="button" class="btn" onclick="next()">Next</button>
         </div>
         <div class="answers-indicator">
+            <!-- <div></div>
             <div></div>
             <div></div>
             <div></div>
-            <div></div>
-            <div></div>
+            <div></div> -->
         </div>
     </div>    
 
-    <div class="result-box custom-box ">
+    <div class="result-box custom-box hide">
         <h1>Quiz Result</h1>
         <table>
             <tr>
                 <td>Total Question</td>
-               <td> <span class="total-question">5</span> </td>
+               <td> <span class="total-question"></span> </td>
             </tr>
             <tr>
                 <td>Attempt</td>
-               <td> <span class="total-question">4</span> </td>
+               <td> <span class="total-attempt"></span> </td>
             </tr>
             <tr>
                 <td>Correct</td>
-               <td> <span class="total-question">3</span> </td>
+               <td> <span class="total-correct"></span> </td>
             </tr>
             <tr>
                 <td>Wrong</td>
-               <td> <span class="total-question">1</span> </td>
+               <td> <span class="total-wrong"></span> </td>
             </tr>
             <tr>
                 <td>Percentage</td>
-               <td> <span class="total-question">60.00%</span> </td>
+               <td> <span class="total-percentage"></span> </td>
             </tr>
             <tr>
                 <td>Your Total Score</td>
-               <td> <span class="total-question">3 / 5</span> </td>
+               <td> <span class="total-score"></span> </td>
             </tr>
         </table>
-        <button type="button" class="btn">Try Again</button>
-        <button type="button" class="btn">Go To Home</button>
+        <button type="button" class="btn" onclick="tryAgainQuiz()">Try Again</button>
+        <button type="button" class="btn" onclick="goToHome()">Go To Home</button>
     </div>
 
 
-    <script src="/main.js"></script>
+    <script src="/question.js"></script>
+    <script src="/app.js"></script>
 </body>
 </html>
