--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div></div> -->
         </div>
     </div>    
-
+    <form name="contact" method="POST" data-netlify="true">
     <div class="result-box custom-box hide">
         <h1>Quiz Result</h1>
         <table>
@@ -68,8 +68,9 @@
         </table>
         <button type="button" class="btn" onclick="tryAgainQuiz()">Try Again</button>
         <button type="button" class="btn" onclick="goToHome()">Go To Home</button>
+        <button type="submit">Enviar</button>
     </div>
-
+</form>
 
     <script src="/question.js"></script>
     <script src="/app.js"></script>
