--- a/index.html
+++ b/index.html
@@ -76,8 +76,13 @@
         <p>
           <label>Your Name: <input type="text" name="name" required /></label>   
         </p>
+        <p>
+            <label>Attempt: <input type="text" name="attempt" disabled class="input" /> <span class="contestadas"></span>  </label>   
+          </p>
+          <p>
+            <label>Correct: <input type="text" name="correct" disabled class="input" /> <span class="aciertos"></span>  </label>   
+          </p>
         
-        <p> Attempt:  <span class="contestadas"></span> </p>
         <p> Correct:  <span class="aciertos"></span> </p>
         <p> Wrong:  <span class="fallos"></span> </p>
         <p> Percentage:  <span class="porcentaje"></span> </p>
