probando datos formulario

--- a/index.html
+++ b/index.html
@@ -77,8 +77,20 @@
           <label>Your Name: <input type="text" name="name" required /></label>   
         </p>
         <p>
-            <label> Attempt <input type="number" name="attempt" class="contestadas" value="contestadas" > <span name="attempt" class="contestadas"></span></label>
+            <label> Attempt <input type="number" name="attempt" class="contestadas" value="contestadas" readonly > <span name="attempt" class="contestadas"></span></label>
 
+        </p>
+        <p>
+            <label> Correct <input type="number" name="correct" class="aciertos" value="aciertos" > <span name="attempt" class="aciertos"></span></label>
+        </p>
+        <p>
+            <label> Wrong <input type="number" name="wrong" class="fallos" value="fallos" > <span name="attempt" class="fallos"></span></label>
+        </p>
+        <p>
+            <label> Percentage <input type="text" name="percentage" class="porcentaje" value="porcentaje" > <span name="attempt" class="porcentaje"></span></label>
+        </p>
+        <p>
+            <label> Puntuación <input type="text" name="Score" class="puntuacion" value="puntuacion" > <span name="attempt" class="puntuacion"></span></label>
         </p>
         
         
