añadiendo readonly en input

--- a/index.html
+++ b/index.html
@@ -81,16 +81,16 @@
 
         </p>
         <p>
-            <label> Correct <input type="number" name="correct" class="aciertos" value="aciertos" > <span name="attempt" class="aciertos"></span></label>
+            <label> Correct <input type="number" name="correct" class="aciertos" value="aciertos" readonly > <span name="attempt" class="aciertos"></span></label>
         </p>
         <p>
-            <label> Wrong <input type="number" name="wrong" class="fallos" value="fallos" > <span name="attempt" class="fallos"></span></label>
+            <label> Wrong <input type="number" name="wrong" class="fallos" value="fallos"  readonly> <span name="attempt" class="fallos"></span></label>
         </p>
         <p>
-            <label> Percentage <input type="text" name="percentage" class="porcentaje" value="porcentaje" > <span name="attempt" class="porcentaje"></span></label>
+            <label> Percentage <input type="text" name="percentage" class="porcentaje" value="porcentaje" readonly > <span name="attempt" class="porcentaje"></span></label>
         </p>
         <p>
-            <label> Puntuación <input type="text" name="Score" class="puntuacion" value="puntuacion" > <span name="attempt" class="puntuacion"></span></label>
+            <label> Puntuación <input type="text" name="Score" class="puntuacion" value="puntuacion"  readonly> <span name="attempt" class="puntuacion"></span></label>
         </p>
         
         
