--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <div class="logo"></div>
         <h3>Instruction: </h3>
         <p>Total number of questions: <span class="total-questions"></span> </p>
-        <p>Aquí te ofrecemos tres pruebas de nivel que te darán una idea aproximada del nivel de inglés que tienes.</p> <br>
+        <p>Aquí te ofrecemos una prueba de nivel que te dará una idea aproximada del nivel de inglés que tienes.</p> <br>
         <p>Al finalizar el test, podrás mandar los datos a la academia.</p>
         <h3>Good Luck!</h3>
         <button type="button" class="btn" onclick="startQuiz()">Start</button>
