--- a/index.html
+++ b/index.html
@@ -132,6 +132,8 @@
         <p>
             <label> <p class="name" >Score</p>  <input type="text" name="Score" class="puntuacion" value="puntuacion"  readonly> <span name="attempt" class="puntuacion"></span></label>
         </p>
+    </div>
+        <div class="formu">
         <p>
             <label> <p class="name" >Level</p>  <input type="text" name="level" class="level" value="level"  readonly> <span name="attempt" class="level"></span></label>
         </p>
