--- a/index.html
+++ b/index.html
@@ -79,20 +79,20 @@
         <div class="tabla-informacion intermedio, firts 1, first 2">
             <table>
                 <tr>
-                    <th>Nivel</th>
-                    <th>Puntuación</th>
+                    <th>Level</th>
+                    <th>Score</th>
                   </tr>
                   <tr>
-                    <td>Intermedio</td>
-                    <td> 0 / 10</td>
+                    <td>Intermediate</td>
+                    <td> 0 / 13</td>
                   </tr>
                   <tr>
                     <td>First 1</td>
-                    <td>11 / 17</td>
+                    <td>14 / 38</td>
                   </tr>
                   <tr>
                     <td>First 2</td>
-                    <td>18 /25</td>
+                    <td>39 /50</td>
                   </tr>
             </table>
         </div>
