--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
  <!-- Navbar -->
 
- <nav class="navbar navbar-expand-lg">
+ <nav class="navbar navbar-dark navbar-expand-lg">
     <div class="container-fluid">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -76,8 +76,8 @@
         </p>
 
         <div class="img">
-          <a href="/quiz/quiz.html"> <img class="nivel" src="/img/PET-Logo.png" alt="logo" ></a> 
-           <a href="/quiz/quiz.html"> <img class="nivel" src="/img/fce.png" alt="logo"> </a>
+          <a class="enlace-nivel" href="/quiz/quiz.html"> <img class="nivel" src="/img/PET-Logo.png" alt="logo" ></a> 
+           <a class="enlace-nivel" href="/quiz/quiz.html"> <img class="nivel" src="/img/fce.png" alt="logo"> </a>
         </div>
     </div>
       <!-- Twitter -->
