--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
         <div class="img">
           <a class="enlace-nivel" href="/quiz/quiz.html"> <img class="nivel" src="/img/PET-Logo.png" alt="logo" ></a> 
            <a class="enlace-nivel" href="/quiz/quiz.html"> <img class="nivel" src="/img/fce.png" alt="logo"> </a>
+           <a class="enlace-nivel" href="/quiz/quiz.html"> <img class="nivel" src="/img/cae.png" alt="logo"> </a>
+           <a class="enlace-nivel" href="/quiz/quiz.html"> <img class="nivel" src="/img/proficiency.jpeg" alt="logo"> </a>
+
         </div>
     </div>
       <!-- Twitter -->
@@ -87,7 +90,146 @@
 </div>
 </section>
 
+<!-- Footer -->
+<footer class="text-center text-lg-start bg-light text-muted">
+  <!-- Section: Social media -->
+  <!-- <section
+    class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
+  > -->
+    <!-- Left -->
+    <!-- <div class="me-5 d-none d-lg-block">
+      <span>Get connected with us on social networks:</span>
+    </div> -->
+    <!-- Left -->
 
+    <!-- Right -->
+    <!-- <div>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-facebook-f"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-twitter"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-google"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-linkedin"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-github"></i>
+      </a>
+    </div> -->
+    <!-- Right -->
+  <!-- </section> -->
+  <!-- Section: Social media -->
+
+  <!-- Section: Links  -->
+  <section class="fondo-footer">
+    <div class="container text-center text-md-start mt-5">
+      <!-- Grid row -->
+      <div class="row mt-3">
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+          <!-- Content -->
+          <h4 class="text-uppercase fw-bold mb-4">
+            <i class="fas fa-gem me-3"></i> <span class="footer-text"> NUESTRO </span>OBJETIVO
+          </h4>
+          <p>
+            El objetivo de Liberty English Academy es que los estudiantes ganen confianza en el inglés a través de la práctica en situaciones reales, con la participación en actividades como el <strong>"Role Play"</strong>  que animan al estudiante a expresarse en inglés. Tú puedes escoger un curso de inglés general, intensivo, one to one, o de negocios. Con un trato que garantiza aprovechamiento total del tiempo.
+            <br> <br>
+            Todos nuestros <strong>profesores</strong>  son <strong> licenciados universitarios, son nativos y/o bilingües</strong>  altamente cualificados y todos disponen de un título de post graduado, especializado en la enseñanza de inglés para extranjeros.
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+          <!-- Content -->
+          <h4 class="text-uppercase fw-bold mb-4">
+            <i class="fas fa-gem me-3"></i> <span class="footer-text"> ¿POR </span> QUÉ NOSOTROS?
+          </h4>
+          <p>
+            Porque en <strong>Liberty English Academy  </strong> nos dedicamos en exclusiva a la enseñanza del idioma inglés, ofreciendo un servicio integral que permite a nuestros alumnos alcanzar un grado de  <strong>formación completa y especializada.</strong>  
+            <br> <br>
+            Nuestra metodología es funcional y comunicativa, basada en el aprendizaje a través de la práctica y la utilización continua del idioma durante el tiempo de clase.
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+          <!-- Links -->
+          <h4 class="text-uppercase fw-bold mb-4">
+            <span class="footer-text">  ETIQUETAS </span> POPULARES
+          </h4>
+          <p>
+            <a href="#!" class="text-reset">academia de ingles en rivas</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">centro de enseñanza de idiomas</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">clases de ingles para empresas</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">academia de ingles</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">english academy</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">liberty academy
+            </a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">pruebas de nivel</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">cambridge english</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">clases de ingles</a>
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+          <!-- Links -->
+          <h4 class="text-uppercase fw-bold mb-4">
+            <span class="footer-text">  ARTÍCUILOS </span> RELACIONADOS
+          </h4>
+          <p><i class="fas fa-home me-3"></i> Test de Nivel Principiante / Elemental</p>
+          <p>
+            <i class="fas fa-envelope me-3"></i>
+            Certificado
+          </p>
+          <p><i class="fas fa-phone me-3"></i> Pruebas de Nivel</p>
+          <p><i class="fas fa-print me-3"></i> Qué Ofrecemos</p>
+          <p><i class="fas fa-print me-3"></i> ¿Por qué Nosotros?</p>
+          <p><i class="fas fa-print me-3"></i> Cursos Intensivos</p>
+          <p><i class="fas fa-print me-3"></i> Test de Nivel Upper / Avanzado</p>
+          <p><i class="fas fa-print me-3"></i> Test de Nivel Pre-Intermedio</p>
+        </div>
+        <!-- Grid column -->
+      </div>
+      <!-- Grid row -->
+    </div>
+  </section>
+  <!-- Section: Links  -->
+
+  <!-- Copyright -->
+  <div class="text-center p-4">
+    © 2021 Copyright:
+    <a class="text-reset fw-bold" href="https:/libertyacademy.es">Liberty English Academy</a>
+  </div>
+  <!-- Copyright -->
+</footer>
+<!-- Footer -->
 
 
 
