--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </div> 
     <!-- Test de Nivel -->
     <div class="informacion">
-    <h3 class="titulo">PRUEBAS DE NIVEL</h3>
+    <h3 class="text-uppercase fw-bold mb-4 titulo">PRUEBAS DE NIVEL</h3>
     
     <p class="descripcion">Aquí te ofrecemos tres pruebas de nivel que te darán una idea aproximada del nivel de inglés que tienes.
         <br><br>
