añadido pet-quiz

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </p>
 
         <div class="img">
-          <a class="enlace-nivel" href="/quiz/quiz.html"> <img class="nivel" src="/img/PET-Logo.png" alt="logo" ></a> 
+          <a class="enlace-nivel" href="/pet/quiz.html"> <img class="nivel" src="/img/PET-Logo.png" alt="logo" ></a> 
            <a class="enlace-nivel" href="/quiz/quiz.html"> <img class="nivel" src="/img/fce.png" alt="logo"> </a>
            <a class="enlace-nivel" href="/quiz/quiz.html"> <img class="nivel" src="/img/cae.png" alt="logo"> </a>
            <a class="enlace-nivel" href="/quiz/quiz.html"> <img class="nivel" src="/img/proficiency.jpeg" alt="logo"> </a>
